update: [장현민]메인로고의 폰트 적용 [PMF-4]

--- a/src/assets/css/navigation/appbar.css
+++ b/src/assets/css/navigation/appbar.css
@@ -6,7 +6,9 @@
   .main-logo{
     color: rgb(255, 255, 255);
     margin: 1rem;
-    font-family: 'Foldit', cursive;
+    font-family: 'Foldit';
+    font-size: 32px;
+    font-weight: 400;
   }
   .main-button{
     color: rgb(255, 255, 255);
@@ -58,5 +60,8 @@
   }
   .list-mt{
     margin-top: 1rem;
+  }
+  .color{
+    background-color: #222224;
   }
   
