--- a/src/assets/css/main/main.css
+++ b/src/assets/css/main/main.css
@@ -1,39 +1,50 @@
 .table-size{
-    width: 90%;
-    height: auto;
-  }
-  .h2{
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    color: white;
-  }
-  .card-check2{ 
-    width: 8rem;
-    height: auto;
-  }
-  .card-check3{ 
-    margin-top: 1rem;
-    margin-left: 3rem;
-    width: 8rem;
-    height: auto;  
-  }
-  .card-mr{
-    margin: 5rem;  
-  }
-  .card-mb{
-    margin-bottom: 7rem;
-  }
-  .top10-img{
-    width: 40px; 
-    height: 6vh; 
-    margin-top: 5px; 
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-  }
-  .search-mr{
-    margin-top: 3rem;
-    margin-bottom: 5rem;
-    background-color: #444444;
-    padding: 0;
-    width: 40%;
-    height: 40%;
-  }
+  width: 90%;
+  height: auto;
+}
+.h2{
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  color: white;
+}
+.card-check2{ 
+  width: 8rem;
+  height: auto;
+  cursor: pointer;
+}
+.card-check3{ 
+  margin-top: 1rem;
+  margin-left: 3rem;
+  width: 8rem;
+  height: auto;  
+  cursor: pointer;
+
+}
+.card-mr{
+  margin: 5rem;  
+}
+.card-mb{
+  margin-bottom: 7rem;
+}
+.top10-img{
+  width: 40px; 
+  height: 6vh; 
+  margin-top: 5px; 
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+.search-mr{
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  background-color: #222224;
+  padding: 0;
+  width: 40%;
+  height: 40%;
+}
+.cardTr {
+  transition: background-color 0.2s ease;
+  cursor: pointer;
+}
+
+.cardTr:hover {
+  background-color: rgb(219, 219, 219);
+}
