feat:[최지원] 로그인 상태에 따라 로그인 버튼 또는 로그아웃 버튼이 보입니다. [PMF-7]

--- a/src/assets/css/navigation/appbar.css
+++ b/src/assets/css/navigation/appbar.css
@@ -64,4 +64,11 @@
   .color{
     background-color: #222224;
   }
+  .logout{
+    margin: 1.5rem;
+    background-color: #222224;
+    width: 60%;
+    height: 4vh;
+    font-size: 18px;
+  }
   
