style:[최지원] 내 정보관리 페이지 css 변경 [PMF-20]

--- a/src/assets/css/myPage/MyPageInfo.css
+++ b/src/assets/css/myPage/MyPageInfo.css
@@ -1,7 +1,5 @@
 .container{
-    margin-left: 70px;
-    margin-right: 70px;
-    margin-top: 50px;
+    margin: 5rem
 }
 .divider {
     margin-top: 20px;
