--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -29,7 +29,7 @@
   .page-image::before {
     content: "";
     position: absolute;
-    width: 1500px;
+    width: 100%;
     height: 100vh;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
   }
