--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -7,8 +7,13 @@
     width: 100%;
     color: white;
     position: relative;
-    margin-top: 7rem;
+    margin-top: 10rem;
     margin-bottom: 10rem;
+  }
+  .home-mr2 {
+    color: white;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
   }
   
   .page-image {
@@ -43,7 +48,7 @@
     color: white;
     text-align: center;
     width: 100%;
-    height: 280vh;
+    height: 150vh;
     background-image: url("");
     background-repeat: "no-repeat";
     background-size: cover;
@@ -104,4 +109,11 @@
     margin-bottom: 8rem;
     font-size: 19px;
     color: white;
+  }
+  .card-logo{
+    color: white;
+    margin-top: 2rem;
+    margin-bottom: 6rem;
+    font-family: 'Foldit';
+    font-size: 80px;    
   }
