--- a/src/assets/css/recruitment/recruitment.css
+++ b/src/assets/css/recruitment/recruitment.css
@@ -1,7 +1,7 @@
 .recruitment-head{
     color: white;
     margin-top: 4rem;
-    margin-bottom: 8rem;
+    margin-bottom: 6rem;
     font-family: 'Foldit';
     font-size: 80px;
 }
@@ -9,7 +9,7 @@
     color: #d5d5d5;
     font-size: 50px;
     margin-left: 2rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 .recruitment-text{
     margin-bottom: 3rem;
@@ -21,5 +21,11 @@
     color: #bcbcbc;
     font-size: 18px;
     margin-left: 2rem;
-    margin-bottom: 5rem;
+    margin-bottom: 8rem;
 }
+#map{
+    width: 50%; 
+    height: 50vh;
+    position: absolute;
+    right: 2rem;
+  }
