style:[최지원] 내공간 css 수정 [PMF-8]

--- a/src/assets/css/myPage/MyPageInfo.css
+++ b/src/assets/css/myPage/MyPageInfo.css
@@ -1,11 +1,11 @@
-.container{
+.myInfoContainer{
     margin: 5rem
 }
 .divider {
     margin-top: 20px;
     margin-bottom: 10px;
 }
-.table {
+.myInfoTable {
     margin-top: 20px;
 }
 .editBtn{
