style:[최지원] 내공간 css 수정 [PMF-8]

--- a/src/assets/css/myPage/myPage.css
+++ b/src/assets/css/myPage/myPage.css
@@ -1,6 +1,7 @@
-.container{
-    margin-left: 70px;
-    margin-top: 50px;
+.myPageContainer{
+    /* margin-left: 70px;
+    margin-top: 50px; */
+    margin-top: 80px;
 }
 .myPageNavi{
     color: rgb(0, 0, 0);
