--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -49,7 +49,7 @@
     text-align: center;
     width: 100%;
     height: 150vh;
-    background-image: url("");
+    /* background-image: url(""); */
     background-repeat: "no-repeat";
     background-size: cover;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
