style: [최지수] 드롭다운 메뉴 이름 구성 변경  [PMF-4]

--- a/src/assets/css/navigation/appbar.css
+++ b/src/assets/css/navigation/appbar.css
@@ -89,12 +89,12 @@
     width: 115%; 
     height: 50vh;
   }
-  .style-btn:disabled{
+  /* .style-btn:disabled{
     background-color: #000000;
     border: 2px solid #444444;
     width: 15px;
     height: 20px;
-  }
+  } */
   .btn-size{
     width: 35rem;
     font-size: 20px;
