feat: [최지수] 관리자의 1:1 문의에 대한 답변 생성 [PMF-11]

--- a/src/assets/css/management/managementQuestionBoard.css
+++ b/src/assets/css/management/managementQuestionBoard.css
@@ -1,7 +1,7 @@
 .managementQuestionBtn{
     text-align: center;
     display: flex;
-    justify-content:end;
+    justify-content: flex-end; /* 이 부분을 수정 */
     align-items: center;
     margin-top: 10px;
 }
