--- a/src/assets/css/navigation/appbar.css
+++ b/src/assets/css/navigation/appbar.css
@@ -87,7 +87,7 @@
     padding: 3rem;
     padding-left: 5rem;
     width: 115%; 
-    height: 50vh;
+    height: 50%;
   }
   /* .style-btn:disabled{
     background-color: #000000;
