--- a/src/assets/css/recruitment/recruitment.css
+++ b/src/assets/css/recruitment/recruitment.css
@@ -23,9 +23,9 @@
     margin-left: 2rem;
     margin-bottom: 8rem;
 }
-#map{
+.map{
     width: 50%; 
-    height: 50vh;
+    height: 35%;
     position: absolute;
     right: 2rem;
   }
