update:[최지원] 카테고리를 바꿔 검색할 수 있음 [PMF-62]

--- a/src/assets/css/shopSearch/shopSearch.css
+++ b/src/assets/css/shopSearch/shopSearch.css
@@ -8,24 +8,26 @@
 .mapShop-title{
     color: #d5d5d5;
     font-size: 50px;
-    margin-left: 2rem;
+    margin-left: 4rem;
     margin-bottom: 2rem;
 }
 .mapShop-text{
-    margin-bottom: 3rem;
-    margin-left: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 5rem;
     color: #bcbcbc;
     font-size: 20px;
 }
-.mapShop-text2{
-    color: #bcbcbc;
-    font-size: 18px;
-    margin-left: 2rem;
-    margin-bottom: 8rem;
+.mapShop-text:hover{
+    margin-bottom: 2rem;
+    margin-left: 5.3rem;
+    color: #e0e0e0;
+    font-size: 20px;
+    cursor: pointer;
 }
 .mapShop{
-    width: 50%; 
+    margin-top: 3rem;
+    width: 60%; 
     height: 35%;
     position: absolute;
-    right: 2rem;
+    right: 5rem;
   }
