update: [장현민] 누락된 action 및 css 추가 [PMF-45]

--- a/src/assets/css/myPage/myPageCard.css
+++ b/src/assets/css/myPage/myPageCard.css
@@ -19,8 +19,8 @@
 .my-card-img{ 
   margin-top: 2em;
     margin-bottom: 1rem;   
-    width: 75%; 
-    height: auto;
+    width: 120px; 
+    height: 200px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 
 }
