--- a/src/assets/css/card/cardsearch.css
+++ b/src/assets/css/card/cardsearch.css
@@ -26,3 +26,19 @@
   width: 100%;
   height: 200px;
 }
+
+.btn {
+  margin: 20px;
+  padding: 10px 20px;
+  background-color: #b3b7b9;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.btn-container {
+  text-align: center;
+  margin: 20px 0;
+}
