--- a/src/assets/css/shopSearch/shopSearch.css
+++ b/src/assets/css/shopSearch/shopSearch.css
@@ -31,3 +31,14 @@
     position: absolute;
     right: 5rem;
   }
+  .mapShop-card-body{
+    margin-top: 2rem;
+    border: solid 1px #b6b6b6;
+    width: 28%;  
+    background-color: #fff;    
+    box-shadow: 0px 4px 8px rgba(148, 27, 75, 0.2);
+}
+.mapShop-card-carousel{
+    margin: 1rem;
+    height: 50%;
+}
