style: [최지수] 관리자 페이지의 전체 스타일 변경 [PMF-70]

--- a/src/assets/css/management/managementBoardRead.css
+++ b/src/assets/css/management/managementBoardRead.css
@@ -1,3 +1,12 @@
 .readBack{
     background-color: white;
 }
+.managementBoardReadTable{
+    border: 1px solid black;
+}
+.centeredTable {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
