style: [최지수] 관리자 페이지의 상단 박스 스타일 추가 [PMF-70]

--- a/src/assets/css/management/management.css
+++ b/src/assets/css/management/management.css
@@ -74,3 +74,16 @@
     height: 130px;
     margin: 60px;
 }
+.red-text {
+    color: red;
+}
+.alertNoResponse{
+    font-size: 11px;
+}
+.requestDataText{
+    font-weight: 500;
+    font-size: 20px;
+}
+.blue-text {
+    color: blue;
+}
