chore:[최지원] css 수정 및 필요 없는 파일 삭제

--- a/src/assets/css/myPage/myPage.css
+++ b/src/assets/css/myPage/myPage.css
@@ -1,6 +1,5 @@
 .myPageContainer{
-    /* margin-left: 70px;
-    margin-top: 50px; */
+    margin-left: 100px;
     margin-top: 80px;
 }
 .myPageNavi{
