--- a/src/assets/css/shopSearch/shopSearch.css
+++ b/src/assets/css/shopSearch/shopSearch.css
@@ -6,37 +6,39 @@
     font-size: 80px;
 }
 .mapShop-title{
-    color: #d5d5d5;
+    color: #2f2f2f;
     font-size: 50px;
-    margin-left: 4rem;
+    margin-left: 3.5rem;
     margin-bottom: 2rem;
 }
 .mapShop-text{
     margin-bottom: 2rem;
-    margin-left: 5rem;
-    color: #bcbcbc;
+    margin-left: 4rem;
+    color: #8b8b8b;
     font-size: 20px;
 }
 .mapShop-text:hover{
     margin-bottom: 2rem;
-    margin-left: 5.3rem;
-    color: #e0e0e0;
+    margin-left: 4.5rem;
+    color: #2f2f2f;
     font-size: 20px;
+    font-weight:700;
     cursor: pointer;
 }
 .mapShop{
-    margin-top: 3rem;
+    /* margin-top: 17rem; */
     width: 60%; 
-    height: 35%;
+    height: 38%;
     position: absolute;
     right: 5rem;
   }
   .mapShop-card-body{
+    margin-left: 3.8rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
     border: solid 1px #b6b6b6;
-    width: 28%;  
+    width: 20%;  
     background-color: #fff;    
-    box-shadow: 0px 4px 8px rgba(148, 27, 75, 0.2);
 }
 .mapShop-card-carousel{
     margin: 1rem;
