--- a/src/assets/css/shopSearch/shopSearch.css
+++ b/src/assets/css/shopSearch/shopSearch.css
@@ -12,13 +12,13 @@
     margin-bottom: 2rem;
 }
 .mapShop-text{
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     margin-left: 4rem;
     color: #8b8b8b;
     font-size: 20px;
 }
 .mapShop-text:hover{
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     margin-left: 4.5rem;
     color: #2f2f2f;
     font-size: 20px;
@@ -26,9 +26,9 @@
     cursor: pointer;
 }
 .mapShop{
-    /* margin-top: 17rem; */
+    margin-top: 3rem;
     width: 60%; 
-    height: 38%;
+    height: 39%;
     position: absolute;
     right: 5rem;
   }
