--- a/src/assets/css/board/boardRead.css
+++ b/src/assets/css/board/boardRead.css
@@ -15,9 +15,9 @@
   border-bottom: solid 1px white;
 }
 .board-read-container{
-  background-color: #222222;
+  background-color: #fff;
 }
 .board-read-container{
-  background-color: #222;
+  background-color: #fff;
   color: #fff;
 }
