--- a/src/assets/css/board/boardRegister.css
+++ b/src/assets/css/board/boardRegister.css
@@ -1,18 +1,18 @@
 .pd{
   padding: 3rem;
-  background-color: #222222; 
+  background-color: #fff; 
 }
 .board-register-body{
-  background-color: #222222; 
-  color: white;
+  background-color: #fff; 
+  color: #222;
 }
 .submit-btn{
   margin-top: 1rem;
-  color: white;
+  color: #222;
 }
 .board-register-container{
   padding: 0; 
 }
 .board-register-body{
-  color: white;
+  color: #222;
 }
