--- a/src/assets/css/help/faq.css
+++ b/src/assets/css/help/faq.css
@@ -15,8 +15,8 @@
     width: 90%;
 }
 .faq3{
-    background-color: #222224;
-    color: #ffffff;
+    background-color: #fff;
+    color: #222;
 }
 
 .faq-title{
