--- a/src/assets/css/help/question.css
+++ b/src/assets/css/help/question.css
@@ -16,7 +16,7 @@
   .question-button-mr {
     margin: 1rem;
     float: right;
-    background-color: #222;
+    background-color: #fff;
     padding: 7px;
     border-radius: 10%;
   }
