--- a/src/assets/css/main/main.css
+++ b/src/assets/css/main/main.css
@@ -36,7 +36,7 @@
 .search-mr{
   margin-top: 3rem;
   margin-bottom: 5rem;
-  background-color: #222224;
+  background-color: #fff;
   padding: 0;
   width: 40%;
   height: 40%;
