--- a/src/assets/css/notice/noticeModify.css
+++ b/src/assets/css/notice/noticeModify.css
@@ -1,10 +1,10 @@
 .pd {
   padding: 3rem;
-  background-color: #222222;
+  background-color: #fff;
 }
 .notice-register-body {
-  background-color: #222222;
-  color: white;
+  background-color: #fff;
+  color: #222;
 }
 .submit-btn {
   margin-top: 1rem;
@@ -13,15 +13,15 @@
   margin: 3rem;
 }
 .notice-read-text {
-  color: white;
+  color: #222;
 }
 .line {
-  border-bottom: solid 1px white;
+  border-bottom: solid 1px #222;
 }
 .notice-button{
-  color: white;
+  color: #222;
   margin-left: 1rem;   
 }
 .notice-modify-container{
-  background-color: #222222
+  background-color: #fff
 }
