--- a/src/assets/css/board/boardList.css
+++ b/src/assets/css/board/boardList.css
@@ -1,28 +1,28 @@
 .board-mr{
-  background-color: #222; 
-  color: white; 
+  background-color: #fff; 
+  color: #222; 
   padding-top: 1rem;
 }
 .category-st{
-  color: white; 
+  color: #222; 
   margin-right: 1rem;
 }
 .board-head{
-    color: white;    
+    color: #222;    
     margin: 3rem;
     cursor: pointer;
   }
 .row-mr{
     margin: auto;
-    background-color: #222222;
-    color: white;
-    border-bottom: solid 1px #ffffff;
+    background-color: #fff;
+    color: #222;
+    border-bottom: solid 1px #222;
 }
 .bottom-line{
-  border-bottom: solid 1px #ffffff;
+  border-bottom: solid 1px #222;
 }
 .router-style{
-  color: #ffffff; 
+  color: #222; 
   text-decoration-line: none;
 }
 .boardTr{
@@ -33,13 +33,13 @@
   background-color: rgb(41, 41, 41);
 }
 .create-register{
-  color: white;
+  color: #222;
   text-decoration-line: none;
 }
 .board-register-link{
   margin-top: 2rem;
 }
 .page-nation{
-  color: #fff; 
-  background-color: #222222;
+  color: #222; 
+  background-color: #fff;
 }
