--- a/src/assets/css/help/caution.css
+++ b/src/assets/css/help/caution.css
@@ -4,8 +4,8 @@
 }
 .caution-color{
     margin: auto;
-    color: white;
-    background-color: #444444;
+    color: #222;
+    background-color: #fff;
     width: 80%;
     border-radius: 1rem;
 }
@@ -17,14 +17,14 @@
 }
 .caution-text{
     margin-bottom: 2rem;
-    border-top: 1px solid  #ffffff;  
+    border-top: 1px solid  #222;  
     padding: 1rem;
-    color: #d2d2d2;
+    color: #222;
 }
 .caution-text2{
     margin-bottom: 2rem;
     padding: 1rem;
-    color: #d2d2d2;
+    color: #222;
 }
 .text-mt{
     margin-top: 1rem;
