--- a/src/assets/css/notice/noticeList.css
+++ b/src/assets/css/notice/noticeList.css
@@ -4,15 +4,15 @@
 }
 .row-mr{
     margin: auto;
-    background-color: #222222;
-    color: white;
-    border-bottom: solid 1px #ffffff;
+    background-color: #fff;
+    color: #222;
+    border-bottom: solid 1px #222;
 }
 .bottom-line{
-  border-bottom: solid 1px #ffffff;
+  border-bottom: solid 1px #222;
 }
 .router-style{
-  color: #ffffff; 
+  color: #222; 
   text-decoration-line: none
 }
 .noticeTr{
@@ -29,6 +29,6 @@
   margin-top: 2rem;
 }
 .page-nation{
-  color: #fff; 
-  background-color: #222222;
+  color: #222; 
+  background-color: #fff;
 }
