style:[최지원] 마이페이지 메뉴바 line class 변경 [PMF-74]

--- a/src/assets/css/myPage/myPage.css
+++ b/src/assets/css/myPage/myPage.css
@@ -16,7 +16,7 @@
     margin-top: 30px;
     margin-bottom: 10px;
 }
-.line{
+.mypageLine{
     justify-content: space-between; 
     display: flex;
 }
