--- a/src/assets/css/notice/noticeRead.css
+++ b/src/assets/css/notice/noticeRead.css
@@ -8,8 +8,8 @@
 .notice-read-text {
   color: white;
 }
-.line {
-  border-bottom: solid 1px white;
+.line2 {
+  border-bottom: solid 1px #222;
 }
 .notice-read-container{
   background-color: #fff;
