--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -55,7 +55,7 @@
     color: black;
     text-align: center;
     width: 100%;
-    height: 150vh;
+    height: 60rem;
     /* background-image: url(""); */
     background-repeat: "no-repeat";
     background-size: cover;
